Fixed the side-menu toolbar overlapping the Search dialog.

--- a/src/calendarjs.scss
+++ b/src/calendarjs.scss
@@ -1249,7 +1249,7 @@ div.select-export-type {
 */
 
 div.search {
-    @include dialog-styles(300px, false, 1000);
+    @include dialog-styles(300px, false, 1003);
     @include dialog-title-bar;
 
     div.contents {
